examples/test/testpolicy14555.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14555
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key30: value16
      key45: value24
      key28: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value11
          key13: value27
          key3: value24
      podSelector:
        matchLabels:
          key18: value45
